# aidlc-workflows

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGES-qa-testing-skills.md  CONTRIBUTING.md  README.md  analysis-report.md  biome.json  knip.json  package.json  tsconfig.json  tsconfig.tests.json
evaluator/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  run.py
evaluator/config/: default.yaml
evaluator/docs/: ide-harness-design.md
evaluator/scripts/: README.md  build_golden_master.py  regenerate_extension_report.py  regenerate_single_report.py  run_batch_evaluation.py  run_cli_evaluation.py  run_comparison_report.py  run_evaluation.py  run_extension_test.py  run_ide_evaluation.py  run_trend_report.py  stability_aggregate.py  stability_batch.sh
evaluator/test_cases/: instructions.md
evaluator/test_cases/sci-calc-v2/: golden.yaml  scenario.yaml
evaluator/test_cases/sci-calc-v2/golden-aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  build-test-results.md  integration-test-instructions.md  performance-test-instructions.md  security-test-instructions.md  unit-test-instructions.md
evaluator/test_cases/sci-calc-v2/golden-aidlc-docs/construction/ci-pipeline/: ci-config.md  ci-pipeline-questions.md  quality-gates.md
evaluator/test_cases/sci-calc-v2/golden-aidlc-docs/construction/code-generation/: code-summary.md
evaluator/test_cases/sci-calc-v2/golden-aidlc-docs/construction/infrastructure-design/: cicd-pipeline.md  deployment-architecture.md  infrastructure-services.md  monitoring-design.md  shared-infrastructure.md
evaluator/test_cases/sci-calc-v2/golden-aidlc-docs/construction/nfr-design/: logical-components.md  performance-design.md  reliability-design.md  scalability-design.md  security-design.md
evaluator/test_cases/sci-calc-v2/golden-aidlc-docs/construction/nfr-requirements/: performance-requirements.md  reliability-requirements.md  scalability-requirements.md  security-requirements.md  tech-stack-decisions.md
evaluator/test_cases/sci-calc-v2/golden-aidlc-docs/ideation/feasibility/: constraint-register.md  feasibility-assessment.md  feasibility-questions.md  raid-log.md
evaluator/test_cases/sci-calc-v2/golden-aidlc-docs/ideation/intent-capture/: intent-capture-questions.md  intent-statement.md  stakeholder-map.md
evaluator/test_cases/sci-calc-v2/golden-aidlc-docs/ideation/rough-mockups/: rough-mockups-questions.md  user-flow.md  wireframes.md
evaluator/test_cases/sci-calc-v2/golden-aidlc-docs/ideation/scope-definition/: intent-backlog.md  scope-definition-questions.md  scope-document.md
evaluator/test_cases/sci-calc-v2/golden-aidlc-docs/inception/application-design/: component-methods.md  (+4 more)
(+804 files in other folders)
