[project]
name = "aidlc-evaluation-framework"
version = "0.1.0"
description = "Evaluation and reporting framework for AI-DLC workflows"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "boto3>=1.43.9",
    "aidlc-runner",
    "aidlc-qualitative",
    "aidlc-quantitative",
    "aidlc-contracttest",
    "aidlc-nonfunctional",
    "aidlc-reporting",
    "aidlc-shared",
    "aidlc-trend-reports",
    "aidlc-cli-harness",
    "aidlc-ide-harness",
]

[tool.uv.workspace]
members = [
    "packages/execution",
    "packages/qualitative",
    "packages/quantitative",
    "packages/contracttest",
    "packages/nonfunctional",
    "packages/reporting",
    "packages/shared",
    "packages/ide-harness",
    "packages/cli-harness",
    "packages/trend-reports",
]

[tool.uv.sources]
aidlc-runner = { workspace = true }
aidlc-qualitative = { workspace = true }
aidlc-quantitative = { workspace = true }
aidlc-contracttest = { workspace = true }
aidlc-nonfunctional = { workspace = true }
aidlc-reporting = { workspace = true }
aidlc-shared = { workspace = true }
aidlc-trend-reports = { workspace = true }
aidlc-cli-harness = { workspace = true }
aidlc-ide-harness = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.13",
    "bandit>=1.9.4",
    "semgrep>=1.163.0",
    "vulture>=2.14",
    "pip-audit>=2.7.0",
]

[tool.bandit]
# Exclude generated run workspaces and virtualenvs; only scan first-party source.
exclude_dirs = ["runs", ".venv", "tests", "node_modules"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Report renderers embed long HTML/Markdown string templates where wrapping
# lines harms readability more than it helps; exempt them from E501.
"packages/trend-reports/src/trend_reports/render_html.py" = ["E501"]
"packages/trend-reports/src/trend_reports/render_md.py" = ["E501"]
"packages/reporting/src/reporting/render_html.py" = ["E501"]
"packages/reporting/src/reporting/render_md.py" = ["E501"]

[tool.pytest.ini_options]
# Only collect package test suites. `norecursedirs` keeps pytest out of
# generated run workspaces (runs/**/workspace/tests) and virtualenvs, and
# importlib mode lets the editable-installed workspace packages import cleanly.
testpaths = ["packages"]
norecursedirs = ["runs", ".venv", "node_modules", ".git", "*/workspace"]
addopts = "--import-mode=importlib"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
